--- a/report/report.tex
+++ b/report/report.tex
@@ -1015,8 +1015,14 @@ engineering principles and a commitment to
 impactful, efficient development.
 \end{IEEEbiography}
 
-\begin{IEEEbiography}{Melisa Uyar}
-melisa kim la
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{author_uyar.png}}]{Melisa Uyar}
+She was born on July 29, 2001, in Pinneberg, Germany.
+She is currently a fourth-year computer engineering student at Manisa Celâl
+Bayar University, specializing in back-end development.
+She completed her internship at "BusinessUp," a performance marketing agency,
+where she now works part-time.
+At BusinessUp, she hones her skills in the Liquid programming language and
+works as a junior full-stack developer.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}{Muhammet Berk Can}
